; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_common.c_b53_flush_arl.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_common.c_b53_flush_arl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { i32 }

@B53_CTRL_PAGE = common dso_local global i32 0, align 4
@B53_FAST_AGE_CTRL = common dso_local global i32 0, align 4
@FAST_AGE_DONE = common dso_local global i32 0, align 4
@FAST_AGE_DYNAMIC = common dso_local global i32 0, align 4
@FAST_AGE_STATIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"time out while flushing ARL\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b53_device*)* @b53_flush_arl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_flush_arl(%struct.b53_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.b53_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.b53_device* %0, %struct.b53_device** %3, align 8
  %6 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %7 = load i32, i32* @B53_CTRL_PAGE, align 4
  %8 = load i32, i32* @B53_FAST_AGE_CTRL, align 4
  %9 = load i32, i32* @FAST_AGE_DONE, align 4
  %10 = load i32, i32* @FAST_AGE_DYNAMIC, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @FAST_AGE_STATIC, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @b53_write8(%struct.b53_device* %6, i32 %7, i32 %8, i32 %13)
  store i32 0, i32* %4, align 4
  br label %15

15:                                               ; preds = %30, %1
  %16 = load i32, i32* %4, align 4
  %17 = icmp ult i32 %16, 10
  br i1 %17, label %18, label %33

18:                                               ; preds = %15
  %19 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %20 = load i32, i32* @B53_CTRL_PAGE, align 4
  %21 = load i32, i32* @B53_FAST_AGE_CTRL, align 4
  %22 = call i32 @b53_read8(%struct.b53_device* %19, i32 %20, i32 %21, i32* %5)
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @FAST_AGE_DONE, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %18
  store i32 0, i32* %2, align 4
  br label %37

28:                                               ; preds = %18
  %29 = call i32 @mdelay(i32 1)
  br label %30

30:                                               ; preds = %28
  %31 = load i32, i32* %4, align 4
  %32 = add i32 %31, 1
  store i32 %32, i32* %4, align 4
  br label %15

33:                                               ; preds = %15
  %34 = call i32 @pr_warn(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %35 = load i32, i32* @EINVAL, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %33, %27
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @b53_write8(%struct.b53_device*, i32, i32, i32) #1

declare dso_local i32 @b53_read8(%struct.b53_device*, i32, i32, i32*) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @pr_warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
